# sycl-bench

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  assign.cxx  assign_gt.cxx  common.h
